@@ -24,11 +24,12 @@
 /*
  * @test
  * @enablePreview
- * @compile --add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED -XDgenerateAssertUnsetFieldsFrame StrictFinalInstanceFieldsTest.java
+ * @library /test/lib
+ * @run main/othervm jdk.test.lib.value.StrictCompiler StrictFinalInstanceFieldsTest.java
  * @run main/othervm -Xlog:verification StrictFinalInstanceFieldsTest
  */
 
-import jdk.internal.vm.annotation.Strict;
+import jdk.test.lib.value.Strict;
 
 public class StrictFinalInstanceFieldsTest {
     public static void main(String[] args) {
